# tenhou-wall-reproducer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  setup.py
.github/workflows/: ci.yml  pip.yml  wheels.yml
src/: tenhou_wall_reproducer.cpp
tests/: test.py
